--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.26.0",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "dotted-map": "^2.2.3",
+    "firebase": "^11.1.0",
+    "framer-motion": "^11.15.0",
+    "motion": "^12.0.0-alpha.2",
+    "next": "^15.1.1",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "react-toastify": "^11.0.2",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5"
   }
 }
